index.css
/* ... */
.modal-text p {
  font-size: 22px;
  font-family: "SeasonSansTRIAL-Medium";
}

.modal-text div {
  background-color: #f96243;
}

.modal-description {
  max-height: 0;
  overflow: hidden;
}

.modal-description p {
  padding: 0 24px;
  font-size: 16px;
  line-height: 24px;
}

.modal.active .modal-description {
  position: absolute;
  bottom: -400px;
  right: 0;
  max-height: 490px;
  width: 710px;
  background-color: #000;
  color: #fff;
  padding: 120px 100px 60px 92px;
  z-index: 2;
}

.modal.active .square-shape {
  background-color: #000;
}

.modal-description.active {
  display: block;
}

.goals {
  position: absolute;
  top: 117px;
  right: 50px;
  width: 484px;
  height: 397px;
}

.goals img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
}

.programme-image-one {
  position: absolute;
  max-width: 272px;
  max-height: 336px;
  top: 30%;
  left: 50%;
  transform: translate(-50%);
}

.programme-image-one img {
  max-width: 100%;
  max-height: 100%;
  object-fit: cover;
}

.mission {
  position: absolute;
  bottom: 50px;
  left: 10%;
  width: 507px;
  height: 365px;
}

.mission img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.mission-text {
  position: absolute;
  bottom: 0;
  right: 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 298px;
  height: 90px;
  background-color: #fff;
  padding: 31px 0 31 31px;
}

.mission-text p {
  font-size: 22px;
  font-family: "SeasonSansTRIAL-Medium";
}

.mission-text div {
  background-color: #f96243;
}

.programme-image-two {
  position: absolute;
  width: 346px;
  height: 245px;
  bottom: 125px;
  right: 25%;
  transform: translateX(50%);
}

.programme-image-two img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

#research {
  border-top: 1px solid #000;
  border-bottom: 1px solid #000;
  padding-bottom: 50px;
}

.research-theme {
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  flex-wrap: wrap;
}

.theme-box {
  width: calc(50% - 10px);
  font-size: 72px;
  font-weight: 420;
  background-color: #fcf4eb;
  padding: 25px 21px 25px 50px;
  position: relative;
  font-family: "SeasonMix-Regular";
}

.theme-box::before {
  content: "";
  position: absolute;
  bottom: 0;
  background-color: #000;
  height: 1px;
  width: calc(100% + 30px);
  left: -20px;
}

.research-description {
  font-size: 16px;
  line-height: 24px;
  padding: 25px 120px 165px;
  width: calc(50% - 10px);
  background-color: #fcf4eb;
  font-family: "SeasonSansTRIAL-Medium";
  z-index: 2;
}

.research-wrapper {
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  flex-wrap: wrap;
}

.theme-card-left {
  display: flex;
  align-items: flex-end;
  flex-direction: column;
  padding-left: 100px;
  width: calc(50% - 10px);
}

.image-card {
  background-color: #fff;
  max-width: 600px;
  height: 670px;
  position: relative;
}

.image-card p {
  padding: 60px;
  font-size: 16px;
  line-height: 24px;
  font-family: "SeasonSansTRIAL-Medium";
}

.image-card img {
  width: 100%;
  height: 388px;
  object-fit: cover;
}

.title-card {
  position: absolute;
  top: 230px;
  left: -102px;
  background-color: #f96243;
  width: 345px;
  height: 158px;
  display: flex;
  align-items: center;
  padding: 45px 53px 45px 41px;
  font-size: 30px;
  line-height: 100%;
  font-family: "SeasonSansTRIAL-Regular";
}

.number {
  position: absolute;
  top: 24px;
  left: 24px;
  width: 85px;
  height: 85px;
  background-color: #fcf4eb;
  border: 1px solid #000;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 30px;
  font-family: "SeasonSansTRIAL-Light";
}

.theme-card-right {
  position: relative;
  display: flex;
  align-items: flex-end;
  flex-direction: column;
  padding-right: 12px;
}

#programme-outcomes {
  position: relative;
  border-bottom: 1px solid #000;
}

.outcome-title {
  width: 50%;
  margin-left: auto;
  padding: 25px 21px 24px 51px;
  position: relative;
  background-color: #fcf4eb;
}

.outcome-title p {
  font-size: 72px;
  line-height: 100%;
  font-family: "SeasonMix-Regular";
}

.outcome-title::before {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  width: calc(100% + 20px);
  height: 1px;
  background-color: #000;
}

.outcomes_wrapper {
  position: relative;
  padding: 200px 0 150px;
  display: flex;
  align-items: stretch;
  align-content: flex-start;
  justify-content: space-between;
  flex-wrap: wrap;
}

.graphic_ornament_programme_1 {
  position: absolute;
  top: 0;
  left: calc(50% - 58px);
  transform: translateX(-50%);
}

.graphic_ornament_programme_2 {
  position: absolute;
  top: 0;
  left: 50%;
}

.outcome-line-left-box {
  position: absolute;
  left: calc(25% - 347px);
}

.outcome-box {
  background-color: #000;
  color: white;
  padding: 43px 27px 68px 31px;
  width: calc(25% - 24px);
  height: 249px;
  font-family: "SeasonSansTRIAL-Medium";
  font-size: 16px;
  line-height: 22px;
}

#who-can-apply {
  border-bottom: 1px solid #000;
  padding-bottom: 0;
}

.apply-theme {
  width: calc(50% - 10px);
  padding: 25px 81px 8px 51px;
  height: 218px;
  background-color: #fcf4eb;
  font-size: 72px;
  line-height: 100%;
  font-family: "SeasonMix-Regular";
  position: relative;
}

.apply-theme::before {
  content: "";
  position: absolute;
  height: 1px;
  background-color: #000;
  width: calc(100% + 50px);
  bottom: 0;
  left: -40px;
}

.apply-wrapper {
  width: 80%;
  margin: 0 auto;
  position: relative;
}

.apply-image {
  display: flex;
  align-items: center;
  justify-content: center;
}

.apply-image img {
  width: 100%;
  object-fit: cover;
  object-position: center;
}

.apply-image-description {
  width: 60%;
  margin: 0 auto;
  background-color: #fcf4eb;
  padding: 30px 26px;
  font-size: 16px;
  line-height: 24px;
  font-family: "SeasonSansTRIAL-Medium";
}
/* ... */

